--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -144,7 +144,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-xs-12 coppyright">© 2015 Flavours. All Rights Reserved.</div>
+                <div class="col-sm-12 col-xs-12 coppyright">© 2016 Ngonlanh. All Rights Reserved.</div>
 
             </div>
             <!--row-->
