--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @RenderSection("health", required: false)
     @Styles.Render("~/Content/css")
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Flavours Home Page</title>
+    <title>@ViewBag.Title</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
     <meta name="description" content="Default Description">
     <meta name="keywords" content="fashion, store, E-commerce">
