Update date shop_03 theme home slide

--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -354,7 +354,7 @@
         <li><a href="contact-us.html">Contact Us</a></li>
     </ul>
 </div>
-<div class="popup1" style="display: block;">
+@*<div class="popup1" style="display: block;">
 
     <div class="newsletter-sign-box">
         <div class="newsletter">
@@ -378,8 +378,8 @@
 
         </div> <!--newsletter-->
     </div> <!--newsletter-sign-box-->
-</div>
-<div id="fade" style="display: block;"></div>
+</div>*@
+@*<div id="fade" style="display: block;"></div>*@
 <div id="fb-root"></div>
 <script>
     (function (d, s, id) {
