List product in cagory

--- a/Shop_03_multiProduct/Views/Product/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Product/Index.cshtml
@@ -159,7 +159,7 @@
                             <div id="productTabContent" class="tab-content">
                                 <div class="tab-pane fade in active" id="product_tabs_description">
                                     <div class="std">
-                                        @Html.Raw(item.ShortDesc)
+                                        @Html.Raw(item.Detail)
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="reviews_tabs">
