--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -19,14 +19,9 @@
     <meta name="robots" content="*">
     <link rel="icon" href="#" type="image/x-icon">
     <link rel="shortcut icon" href="#" type="image/x-icon">
-    <!-- CSS Style -->
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css" media="all">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/revslider.css">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/owl.theme.css">
+        
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/jquery.bxslider.css">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/jquery.mobile-menu.css">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css">    
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/style.css" media="all">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/responsive.css" media="all">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
@@ -35,19 +30,20 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 </head>
 <body>
-    <!-- Header -->
+    
     @Html.Partial("_partial/_MainHeader_1")
-    <!-- End Header-->
+    
     @RenderBody()
+    <script type="text/javascript" src="/Scripts/jquery-1-10.js"></script>    
     @Scripts.Render("~/bundles/scripts")
-    @*@Scripts.Render("~/bundles/bootstrap")*@
+    
     @Html.Raw(commonInfo.AnperoPlugin)
     @RenderSection("scripts", required: false)
     @Html.Raw(commonInfo.PageScript)
-    <!-- Footer -->
+    
+
     @Html.Partial("_partial/_MainFooter_1")
-    <!-- End Footer-->
-    <!-- JavaScript -->
+    
     
     
     <script type="text/javascript" src="/assets/js/parallax.js"></script>
