--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -174,20 +174,10 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="item last">
-                                    <div class="item-inner">
-                                        <a class="product-image" title="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" href="#"><img alt="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" src="/assets/images/product-img.jpg"></a>
-                                        <div class="product-details">
-                                            <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
-                                            <!--access-->
-                                            <strong>1</strong> x <span class="price">$80.00</span>
-                                            <p class="product-name"><a href="product-detail.html">JP Lizzy Satchel Designer Diaper Ba...</a></p>
-                                        </div>
-                                    </div>
-                                </li>
+                              
                             </ul>
                             <div class="actions">
-                                <button class="btn-checkout" title="Checkout" type="button" onclick="window.location=checkout.html"><span>Checkout</span></button>
+                                <button class="btn-checkout" title="Checkout" type="button" onclick="window.location=checkout"><span>Đặt hàng</span></button>
                             </div>
                             <!--actions-->
                         </div>
