--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                                             <!-- Item -->
                                             <div class="item">
                                                 <div class="pro-img">
-                                                    <a href="@Anpero.StringHelpper.GetParentCategoryLink(childItem.Name, childItem.Id)">
+                                                    <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
                                                         <img src="@childItem.Images" alt="@childItem.Name">
                                                         <div class="pro-info">@childItem.Name</div>
                                                     </a>
